-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
It appears that with conversion to clio this important bit of funcionality that allows us to balance lock counts on clients was lost.
Vitaly tracked it to this patch:
commit fd908da92ccd9aab4ffc3d2463301831260c0474
Author: huanghua <huanghua>
Date: Thu Feb 7 08:07:16 2008 +0000
b=14149
i=yong.fan
i=rahul.deshmukh
i=nikita.danilov
- use req_capsule interface for client.
- add some interoperability support on server side.
The removal seems to be accidental.
Where before all enqueues came via a single path and ELC was alwas engaged, this is no longer the case.
The patch was cli_enqueue() -> ldlm_prep_enqueue_req()
and this call to ldlm_prep_enqueue_req() is now missing for glimpse enqueue.
- is related to
-
LU-6529 Server side lock limits to avoid unnecessary memory exhaustion
-
- Closed
-